Closed Bug 1880149 Opened 1 year ago Closed 1 year ago

VideoEncoderTraits::Validate returns empty error message unexpectedly

Categories

(Core :: Audio/Video: Web Codecs, defect, P5)

defect

Tracking

()

RESOLVED FIXED
128 Branch
Tracking Status
firefox128 --- fixed

People

(Reporter: chunmin, Assigned: padenot)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

Since VideoEncoderTraits::Validate sets nothing for the error message, VideoEncoder::Configure's TypeError, The rejected-promise error from VideoEncoder::IsConfigSupported are unexpectedly incomplete.

The aErrorMessage should be set accordingly, or the function signature should be changed to something like Result<Ok, nsCString> VideoEncoderTraits::Validate(const VideoDecoderConfig& aConfig)

Assignee: cchang → padenot
Blocks: 1900376
Pushed by padenot@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/edbc1f6034ac Assign an error message when a VideoEncoderConfig isn't valid. r=chunmin
Status: NEW → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 128 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: