Bug 1880149 - Assign an error message when a VideoEncoderConfig isn't valid. r=chunmin

Differential Revision: https://phabricator.services.mozilla.com/D212438